# gtk-vulkan-android-demo

./: .gitignore  README.md  meson.build
.github/workflows/: android.yml
packaging/android/: iconv.wrap
packaging/android/app/: foreground.xml  pixiewood.xml  space.ampernic.GtkVulkanDemo.metainfo.xml
packaging/android/gtk/: android-accent-below-31.patch  android-choreographer-fallback.patch  android-clipboard-lazy-manager.patch  android-input-jni.patch  android-vulkan-backend.patch  android-vulkan-primary.patch  android-vulkan-procaddr-pre28.patch  android-window-insets-pre30.patch  gsk-globals-ubo.patch  gsk-transform-pushtransform-leak.patch
src/: main.c
